Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P0: Blocker
-
Resolution: Done
-
Affects Version/s: 5.14.2
-
Fix Version/s: 5.14.2, 5.15.0 Beta1
-
Component/s: Multimedia
-
Labels:None
-
Platform/s:
-
Commits:19b111fa2f872e8c356ca130ce5a03ae52375934 (qt/qtmultimedia/5.14)
Description
\qt\work\install\mkspecs\android-clang -o .obj\armeabi-v7a\qmediaplayer.obj playback\qmediaplayer.cpp
agent:2020/02/19 10:10:57 build.go:220: playback\qmediaplayer.cpp:370:36: error: incomplete type 'QDir' named in nested name specifier
agent:2020/02/19 10:10:57 build.go:220: QString tempFileName = QDir::tempPath() + media.request().url().path();
agent:2020/02/19 10:10:57 build.go:220: ^~~~~~
agent:2020/02/19 10:10:57 build.go:220: C:\Users\qt\work\install\include\QtCore/qfileinfo.h:51:7: note: forward declaration of 'QDir'
agent:2020/02/19 10:10:57 build.go:220: class QDir;
agent:2020/02/19 10:10:57 build.go:220: ^
agent:2020/02/19 10:10:57 build.go:220: playback\qmediaplayer.cpp:371:13: error: invalid use of incomplete type 'QDir'
agent:2020/02/19 10:10:57 build.go:220: QDir().mkpath(QFileInfo(tempFileName).path());
agent:2020/02/19 10:10:57 build.go:220: ^~~~~~
agent:2020/02/19 10:10:57 build.go:220: C:\Users\qt\work\install\include\QtCore/qfileinfo.h:51:7: note: forward declaration of 'QDir'
agent:2020/02/19 10:10:57 build.go:220: class QDir;
The error was in "qt/qt5", revision: af4d55ad061b0b62a8e0101217362f008b14c2a5
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1582101229
Tested changes (refs/builds/qtci/5.14/1582101215):
https://codereview.qt-project.org/c/qt/qt5/+/289952 Update submodules on '5.14' in qt/qt5