Android: Fix invalid use of incomplete type 'QDir'

Change-Id: Id0a2d380eae9adce441c9eb82367435894e7a7d8
Fixes: QTBUG-82370
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>